left: fix missing borders from some panes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -830,6 +830,8 @@
             /// Version info.
             ._357v7 { c: fg }
         }
+        /// Left -> Add missing borders to some panes.
+        &._2t4Ic { border-right: 1px solid bd }
     }
 
     // App -> Right.
